--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section class="recommended-section">
                 <div class="section-header">
                     <h2 class="section-title">Recommended Articles</h2>
-                    <a href="#" class="see-all">See all →</a>
+                    <a href="posts-list.html" class="see-all">See all →</a>
                 </div>
                 
                 <div class="articles-grid" id="articles-grid">
