Edit name and add image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PerformancePulse - 공연 추천 블로그</title>
+    <title>StageX - 공연 추천 블로그</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <span class="logo-icon">🎭</span>
-                    <span class="logo-text">PerformancePulse</span>
+                    <img src="images/logo/stagex.png" alt="StageX" class="logo-icon">
+                    <span class="logo-text">StageX</span>
                 </div>
                 <nav class="nav">
                     <a href="#" class="nav-link">Subscribe</a>
@@ -53,7 +53,10 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">PerformancePulse</h3>
+                    <div class="footer-logo">
+                        <img src="images/logo/stagex.png" alt="StageX" class="footer-logo-icon">
+                        <h3 class="footer-title">StageX</h3>
+                    </div>
                     <nav class="footer-nav">
                         <a href="#" class="footer-link">About Us</a>
                         <a href="#" class="footer-link">Our Story</a>
