--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>공연 상세 - PerformancePulse</title>
+    <title>공연 상세 - StageX</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/post.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -16,7 +16,7 @@
                 <div class="logo">
                     <a href="index.html">
                         <span class="logo-icon">🎭</span>
-                        <span class="logo-text">PerformancePulse</span>
+                        <span class="logo-text">StageX</span>
                     </a>
                 </div>
                 <nav class="nav">
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">PerformancePulse</h3>
+                    <h3 class="footer-title">StageX</h3>
                     <nav class="footer-nav">
                         <a href="#" class="footer-link">About Us</a>
                         <a href="#" class="footer-link">Our Story</a>
