--- a/posts-list.html
+++ b/posts-list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>모든 공연 - PerformancePulse</title>
+    <title>모든 공연 - StageX</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         .posts-list-container {
@@ -151,7 +151,7 @@
                 <div class="logo">
                     <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px;">
                         <span class="logo-icon">🎭</span>
-                        <span class="logo-text">PerformancePulse</span>
+                        <span class="logo-text">StageX</span>
                     </a>
                 </div>
                 <nav class="nav">
@@ -195,7 +195,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">PerformancePulse</h3>
+                    <h3 class="footer-title">StageX</h3>
                     <nav class="footer-nav">
                         <a href="#" class="footer-link">About Us</a>
                         <a href="#" class="footer-link">Our Story</a>
