--- a/post.html
+++ b/post.html
@@ -14,10 +14,8 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="index.html">
-                        <span class="logo-icon">🎭</span>
-                        <span class="logo-text">StageX</span>
-                    </a>
+                    <img src="images/logo/stagex.png" alt="StageX" class="logo-icon">
+                    <span class="logo-text">StageX</span>
                 </div>
                 <nav class="nav">
                     <a href="index.html" class="nav-link">Home</a>
