--- a/posts-list.html
+++ b/posts-list.html
@@ -148,15 +148,11 @@
     <header class="header">
         <div class="container">
             <div class="nav-wrapper">
-                <div class="logo">
-                    <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px;">
-                        <span class="logo-icon">🎭</span>
-                        <span class="logo-text">StageX</span>
-                    </a>
-                </div>
+                <a href="index.html" class="logo">
+                    <img src="images/logo/stagex.png" alt="StageX" class="logo-icon">
+                    <span class="logo-text">StageX</span>
+                </a>
                 <nav class="nav">
-                    <a href="index.html" class="nav-link">홈</a>
-                    <a href="posts-list.html" class="nav-link">모든 공연</a>
                     <button class="search-btn" aria-label="Search">🔍</button>
                 </nav>
             </div>
