--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <header class="header">
         <div class="container">
             <div class="nav-wrapper">
-                <div class="logo">
+                <a href="index.html" class="logo">
                     <img src="images/logo/stagex.png" alt="StageX" class="logo-icon">
                     <span class="logo-text">StageX</span>
-                </div>
+                </a>
                 <nav class="nav">
                     <a href="#" class="nav-link">Subscribe</a>
-                    <a href="#" class="nav-link">Sign In</a>
                     <button class="search-btn" aria-label="Search">🔍</button>
                 </nav>
             </div>
